<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Delhi Post Office Finder</string>
    <string name="title_1">Delhi</string>
    <string name="title_2">Post Office</string>
    <string name="title_3">Finder</string>
    <string name="title_4">Version: 1.0</string>
    <string name="title_5">Developed By: Team Hard Targets</string>
    <string name="action_more">More</string>
    <string name="action_rate">Rate Us</string>
    <string name="action_share">Share</string>
    <string name="action_about">About Us</string>
    <string name="action_disclaimer">Disclaimer</string>
    <string name="action_exit">Exit</string>
    <string name="title_section1">Office Name</string>
    <string name="title_section2">Pin Code</string>
    <string name="title_section3">District</string>
    <string name="etSearch1">Enter Office Name</string>
    <string name="etSearch2">Enter Pin Code</string>
    <string name="etSearch3">Enter District Name</string>
    <string name="dialog_title">Alert</string>
    <string name="dialog_message">Are you sure you want to quit the application?</string>
    <string name="yes">Quit</string>
    <string name="no">Return</string>
    <string name="txtOfficeName">Office Name</string>
    <string name="txtPinCode">Pin Code</string>
    <string name="txtDistrict">District</string>
    <string name="txtStatus">Status</string>
    <string name="txtSubOffice">Sub Office</string>
    <string name="txtHeadOffice">Head Office</string>
    <string name="txtLocation">Location</string>
    <string name="txtTelephone">Telephone</string>
    <string name="txtSPCC">SPCC</string>
    <string name="txtPDI">Postal Department Information</string>
    <string name="call">Call</string>
    <string name="hello_world">Hello world!</string>
    <string name="headPin">Pin Code</string>
    <string name="headDistrict">District</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="action_settings">Settings</string>
    <string name="tu_top">Menu</string>
    <string name="tu_tab1">Search by Office Name</string>
    <string name="tu_tab2">Search by Pin Code</string>
    <string name="tu_tab3">Search by District</string>
    <string name="tu_msg">Swipe to switch tabs</string>
    <string name="tu_btn">OK</string>
</resources>
