<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    tools:context=".ViewActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <TextView
        		android:layout_width="match_parent"
		        android:layout_height="wrap_content"
        		android:textStyle="bold"
        		android:textSize="18sp"
        		android:alpha="0.7"
        		android:text="@string/txtOfficeName" />
    		
    		<View
    		    android:layout_width="fill_parent"
    		    android:layout_height="1dp"
    		    android:paddingBottom="5dp"
    		    android:alpha="0.5"
    		    android:background="#000000" />

    		<TextView
    		    android:id="@+id/tvOfficeName"
    		    android:layout_width="match_parent"
    		    android:layout_height="wrap_content"
    		    android:paddingLeft="5dp"
    		    android:paddingBottom="5dp"
    		    android:textSize="18sp" />
		
    		<TextView
    		    android:layout_width="match_parent"
    		    android:layout_height="wrap_content"
    		    android:textStyle="bold"
    		    android:textSize="18sp"
    		    android:alpha="0.7"
        		android:text="@string/txtPinCode" />
    
		    <View
        		android:layout_width="fill_parent"
		        android:layout_height="1dp"
        		android:paddingBottom="5dp"
        		android:alpha="0.5"
        		android:background="#000000" />
		
		    <TextView
        		android:id="@+id/tvPinCode"
        		android:layout_width="match_parent"
    		    android:layout_height="wrap_content"
    		    android:paddingLeft="5dp"
    		    android:paddingBottom="5dp"
    		    android:textSize="18sp" />

		    <TextView
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:textStyle="bold"
        		android:textSize="18sp"
        		android:alpha="0.7"
        		android:text="@string/txtDistrict" />
    
		    <View
    		    android:layout_width="fill_parent"
        		android:layout_height="1dp"
        		android:paddingBottom="5dp"
        		android:alpha="0.5"
        		android:background="#000000" />

    		<TextView
    		    android:id="@+id/tvDistrict"
    		    android:layout_width="match_parent"
    		    android:layout_height="wrap_content"
    		    android:paddingLeft="5dp"
    		    android:paddingBottom="5dp"
    		    android:textSize="18sp" />

		    <TextView
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:textStyle="bold"
        		android:textSize="18sp"
        		android:alpha="0.7"
        		android:text="@string/txtStatus" />
    
    		<View
        		android:layout_width="fill_parent"
        		android:layout_height="1dp"
        		android:paddingBottom="5dp"
        		android:alpha="0.5"
        		android:background="#000000" />

		    <TextView
        		android:id="@+id/tvStatus"
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content"
    		    android:paddingLeft="5dp"
    		    android:paddingBottom="5dp"
    		    android:textSize="18sp" />

		    <TextView
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:textStyle="bold"
		        android:textSize="18sp"
		        android:alpha="0.7"
		        android:text="@string/txtSubOffice" />
    
		    <View
		        android:layout_width="fill_parent"
		        android:layout_height="1dp"
		        android:paddingBottom="5dp"
		        android:alpha="0.5"
		        android:background="#000000" />

    		<TextView
    		    android:id="@+id/tvSubOffice"
    		    android:layout_width="match_parent"
    		    android:layout_height="wrap_content"
    		    android:paddingLeft="5dp"
    		    android:paddingBottom="5dp"
    		    android:textSize="18sp" />

		    <TextView
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:textStyle="bold"
        		android:textSize="18sp"
        		android:alpha="0.7"
        		android:text="@string/txtHeadOffice" />
   
    		<View
    		    android:layout_width="fill_parent"
        		android:layout_height="1dp"
        		android:paddingBottom="5dp"
        		android:alpha="0.5"
        		android:background="#000000" />

		    <TextView
        		android:id="@+id/tvHeadOffice"
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content"
    		    android:paddingLeft="5dp"
    		    android:paddingBottom="5dp"
    		    android:textSize="18sp" />

		    <TextView
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:textStyle="bold"
        		android:textSize="18sp"
        		android:alpha="0.7"
        		android:text="@string/txtLocation" />
    
    		<View
        		android:layout_width="fill_parent"
        		android:layout_height="1dp"
        		android:paddingBottom="5dp"
        		android:alpha="0.5"
        		android:background="#000000" />

		    <TextView
        		android:id="@+id/tvLocation"
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content"
    		    android:paddingLeft="5dp"
    		    android:paddingBottom="5dp"
    		    android:textSize="18sp" />

		    <TextView
    		    android:layout_width="match_parent"
    		    android:layout_height="wrap_content"
    		    android:textStyle="bold"
    		    android:textSize="18sp"
    		    android:alpha="0.7"
    		    android:text="@string/txtTelephone" />
    
    		<View
    		    android:layout_width="fill_parent"
    		    android:layout_height="1dp"
    		    android:paddingBottom="5dp"
    		    android:alpha="0.5"
    		    android:background="#000000" />
    		
    		<LinearLayout
    		    android:layout_width="match_parent"
    		    android:layout_height="wrap_content"
    		    android:orientation="horizontal" >
    		    
    		    <TextView
        			android:id="@+id/tvTelephone"
        			android:layout_width="0dp"
        			android:layout_height="wrap_content"
    		    	android:paddingLeft="5dp"
    		    	android:paddingBottom="5dp"
    		    	android:textSize="18sp"
    		    	android:layout_weight="1"
    		    	android:layout_gravity="center_vertical" />

    		    <ImageButton
    		        android:id="@+id/bCall"
    		        android:layout_width="wrap_content"
    		        android:layout_height="wrap_content"
    		        android:contentDescription="@string/call"
    		        android:src="@drawable/ic_action_call" />
    		    
    		</LinearLayout>

		    <TextView
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:textStyle="bold"
		        android:textSize="18sp"
		        android:alpha="0.7"
    		    android:text="@string/txtSPCC" />
    
    		<View
        		android:layout_width="fill_parent"
        		android:layout_height="1dp"
		        android:paddingBottom="5dp"
    		    android:alpha="0.5"
        		android:background="#000000" />

    		<TextView
        		android:id="@+id/tvSPCC"
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content"
    		    android:paddingLeft="5dp"
    		    android:paddingBottom="5dp"
    		    android:textSize="18sp" />

    		<TextView
    		    android:layout_width="match_parent"
    		    android:layout_height="wrap_content"
    		    android:textStyle="bold"
    		    android:textSize="18sp"
    		    android:alpha="0.7"
    		    android:text="@string/txtPDI" />
    
    		<View
    		    android:layout_width="fill_parent"
    		    android:layout_height="1dp"
    		    android:paddingBottom="5dp"
    		    android:alpha="0.5"
    		    android:background="#000000" />

    		<TextView
    		    android:id="@+id/tvPDI"
    		    android:layout_width="match_parent"
    		    android:layout_height="wrap_content"
    		    android:paddingLeft="5dp"
    		    android:paddingBottom="5dp"
    		    android:textSize="18sp" />
            
        </LinearLayout>
    </ScrollView>
    
    <com.google.ads.AdView android:id="@+id/adView0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        ads:adUnitId="a1527abeae7c6cb"
        ads:adSize="BANNER"
        ads:loadAdOnCreate="true" />

</LinearLayout>
